// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing pinMessage function should return a failed test due to failure in message sending 1`] = `
Object {
  "message": "    
    can not send message to channel x
",
  "pass": false,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return a failed test due to isNot false and timeout (messageIdentifier) 1`] = `
Object {
  "message": "    
    expected: pin message of id 1233
    received: informed message was not pinned
",
  "pass": false,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return a failed test due to isNot false and timeout 1`] = `
Object {
  "message": "    
    expected: pin message of id 1233
    received: informed message was not pinned
",
  "pass": false,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return a failed test due to message pinned but isNot true 1`] = `
Object {
  "message": "    
    expected: to not pin message of id 1233
    received: message pin = false
",
  "pass": false,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return a passed test due to isNot true and timeout 1`] = `
Object {
  "pass": true,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return a passed test due to message pinned 1`] = `
Object {
  "pass": true,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return error message due to no messageIdentifier (null) 1`] = `
Object {
  "message": "    
    expected: message identifier to be a string or a IMessageIdentifier object
    received: null
",
  "pass": false,
  "testName": "pinMessage",
}
`;

exports[`testing pinMessage function should return error message due to no messageIdentifier (undefined) 1`] = `
Object {
  "message": "    
    expected: message identifier to be a string or a IMessageIdentifier object
    received: undefined
",
  "pass": false,
  "testName": "pinMessage",
}
`;
